--- a/CourseCenterMS/CourseCenterMS/Form1.resx
+++ b/CourseCenterMS/CourseCenterMS/Form1.resx
@@ -126,7 +126,7 @@
         /+DZ00UAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAllGroups.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABFpJREFUWEfV
         Vm2IVFUYHkv7wEqo/BGVBX0hGJFp9AWGZoQWFtafIMMKyvALi35EUH+EvgwFUUQrSgVbiFiiMkUsMF1k
