--- a/CourseCenterMS/CourseCenterMS/Form1.resx
+++ b/CourseCenterMS/CourseCenterMS/Form1.resx
@@ -227,10 +227,10 @@
     <value>924, 17</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="majalla" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <!--<data name="majalla" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\majalla.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="majallab" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\majallab.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
+  </data>-->
 </root>
